# vnstock-forecast

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yml  pyproject.toml  requirement.yml
config/: config.yaml
config/data/: updater.yaml
config/data/const/: resolutions.yaml
docs/: .~lock.dataset_raw.ods#
notebooks/draft/: test.ipynb  test_analysis.ipynb  test_backtest.ipynb  test_config.ipynb  test_data_module.ipynb  test_update_module.ipynb
notebooks/guide/: analysis_bot_tutorial.ipynb  backtest_tutorial.ipynb  data_tutorial.ipynb  finance_data_tutorial.ipynb  profiler_tutorial.ipynb
notebooks/test/: test_config.ipynb
src/vnstock_forecast/: __init__.py  config.py
src/vnstock_forecast/analysis/: __init__.py  base.py  bot.py  profile.py  profiler.py  registry.py  signal.py
src/vnstock_forecast/backtest/: __init__.py  bot_base.py  context.py  engine.py  examples.py  portfolio.py  report.py
src/vnstock_forecast/cli/: __init__.py
src/vnstock_forecast/client/: __init__.py  vietstock_client.py
src/vnstock_forecast/data/: query.py  updater.py
src/vnstock_forecast/engine/: __init__.py
src/vnstock_forecast/forecast/: __init__.py  profiler.py  registry.py  signal.py
src/vnstock_forecast/schemas/: config.py  data.py
src/vnstock_forecast/shared/: path.py
src/vnstock_forecast/utils/: config_utils.py  time_utils.py
user/: README.md
user/bots/: README.md
user/bots/examples/: __init__.py  examples.py
user/builtin/profiles/: double_sma_crossover.json  macd_crossover.json  rsi_crossover.json  sma_crossover.json  (+1 more)
(+198 files in other folders)
